# LDSO-ROS

./: CMakeLists.txt  README.md  package.xml
ROS/: CMakeLists.txt  DatasetReader.h  run_dso_node.cpp  run_dso_node_pangolin.cpp  run_ldso_node.cpp  run_ldso_node_pangolin.cpp
config/: camera.txt
examples/: run_dso_euroc.cc  run_dso_tum_mono.cc
include/frontend/: DSOViewer.h
include/internal/: IndexThreadReduce.h
include/internal/OptimizationBackend/: AccumulatedSCHessian.h  AccumulatedTopHessian.h
